version/0.33/_sources/api/solver/_autosummary/settings/create_8.rst.txt
:orphan:

.. _create_8:

create
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.create_8
    :show-inheritance:

.. rubric:: Arguments

========================================================================   =====================================================================================

Argument                                                                                                                                                 Summary

========================================================================   =====================================================================================
:ref:`name <name_17>`                                                                                                       The prefix for mesh interface names.

:ref:`zone1 <zone1>`                                                                                                          First interface zones for pairing.

:ref:`zone2 <zone2>`                                                                                                         Second interface zones for pairing.

:ref:`zone1_list <zone1_list>`                                                                                     First interface defining this mesh-interface.

:ref:`zone2_list <zone2_list>`                                                                                    Second interface defining this mesh-interface.

:ref:`mapped <mapped>`                                                                                               Specifies whether mesh-interface is mapped.

:ref:`enable_local_mapped_tolerance <enable_local_mapped_tolerance>`                                             Enable local tolerance for this mesh interface.

:ref:`use_local_edge_length_factor <use_local_edge_length_factor>`             Enable tolerance based on local edge length factor instead of absolute tolerance.

:ref:`local_relative_mapped_tolerance <local_relative_mapped_tolerance>`                                                                              Tolerance.

:ref:`local_absolute_mapped_tolerance <local_absolute_mapped_tolerance>`                                                                              Tolerance.

:ref:`periodic <periodic_4>`                                                                Specifies whether mesh-interface is adjacent to periodic boundaries.

:ref:`coupled <coupled_1>`                                                                                          Specifies whether mesh-interface is coupled.

:ref:`matching <matching>`                                                                                         Specifies whether mesh-interface is matching.

:ref:`ignore_area_difference <ignore_area_difference>`                                                    Check if user want to create poorly matched interface.

:ref:`static <static_1>`                                                                                             Specifies whether mesh-interface is static.

========================================================================   =====================================================================================

.. rubric:: Included in:

================================   ===========================

Parent                                                 Summary

================================   ===========================
:ref:`interface_4 <interface_4>`       Create mesh interfaces.

================================   ===========================

