version/0.39/_sources/api/solver/_autosummary/settings/create_8.rst.txt
:orphan:

.. _create_8:

create
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.create_8
    :show-inheritance:

.. rubric:: Arguments

========================================================================   =====================================================================================

Argument                                                                                                                                                 Summary

========================================================================   =====================================================================================
:ref:`si_name <si_name>`                                                                                                 The name/prefix for the mesh interface.

:ref:`all_bnd <all_bnd>`                                                                                              Pick up zones for mesh interface creation.

:ref:`zone_ids <zone_ids_1>`                                                                                       Boundary zones and/or cell zones for pairing.

:ref:`exclude_pair <exclude_pair>`                                                                                               Excluding specified zone pairs.

:ref:`exclude_zone_ids <exclude_zone_ids>`                                                                              Wall and/or interface zones for pairing.

:ref:`zone1_list <zone1_list>`                                                                                     First interface defining this mesh-interface.

:ref:`zone2_list <zone2_list>`                                                                                    Second interface defining this mesh-interface.

:ref:`mapped <mapped>`                                                                                               Specifies whether mesh-interface is mapped.

:ref:`enable_local_mapped_tolerance <enable_local_mapped_tolerance>`                                             Enable local tolerance for this mesh interface.

:ref:`use_local_edge_length_factor <use_local_edge_length_factor>`             Enable tolerance based on local edge length factor instead of absolute tolerance.

:ref:`local_relative_mapped_tolerance <local_relative_mapped_tolerance>`                                                                              Tolerance.

:ref:`local_absolute_mapped_tolerance <local_absolute_mapped_tolerance>`                                                                              Tolerance.

:ref:`periodic <periodic_3>`                                                                Specifies whether mesh-interface is adjacent to periodic boundaries.

:ref:`coupled <coupled_1>`                                                                                          Specifies whether mesh-interface is coupled.

:ref:`matching <matching>`                                                                                         Specifies whether mesh-interface is matching.

:ref:`static <static_1>`                                                                                             Specifies whether mesh-interface is static.

:ref:`ignore_area_difference <ignore_area_difference>`                                                    Check if user want to create poorly matched interface.

========================================================================   =====================================================================================

.. rubric:: Included in:

========================================   ===============================

Parent                                                             Summary

========================================   ===============================
:ref:`mesh_interfaces <mesh_interfaces>`       The mesh interfaces object.

========================================   ===============================

